--- a/akuaa/templates/akuaa/book.html
+++ b/akuaa/templates/akuaa/book.html
@@ -1,7 +1,10 @@
 {% extends 'akuaa/base.html' %}
 {% load static %}
+{% block css_files %}
+    <link rel="stylesheet" type="text/css" href="{% static 'akuaa/styles.css' %}">
+{% endblock %}
 {% block content %}
-<section class="foundation-bg">
+<section class="title-bg">
     <div class="contact pt-5">
         <h4 class="page-title pt-4">Book Me</h4>
     </div>
@@ -20,7 +23,7 @@
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-md-6 pt-4 pb-4">
+            <div class="col-lg-6 col-md-6 col-sm-12 pt-4 pb-4">
                 <h2>Book {{ books.name }}</h2>
                 <p>Please fill ths form below and I'll sure do get back to you asap</p>
                 <form id="form" method="POST" class="pt-4">
@@ -74,7 +77,7 @@
                     </button>
                 </form>
             </div>
-            <div class="col-md-6 pt-4 pb-4">
+            <div class="col-lg-6 col-md-6 col-sm-12 pt-4 pb-4">
                 <h4>Other ways to reach me</h4>
                 <div>
                     <img src="{% static 'akuaa/images/mail.png' %}" height="25px" alt="">
