--- a/akuaa/templates/akuaa/career.html
+++ b/akuaa/templates/akuaa/career.html
@@ -1,7 +1,10 @@
 {% extends 'akuaa/base.html' %}
 {% load static %}
+{% block css_files %}
+    <link rel="stylesheet" type="text/css" href="{% static 'akuaa/styles.css' %}">
+{% endblock %}
 {% block content %}
-<section class="career-bg">
+<section class="title-bg">
     <div class="contact pt-5">
         <h4 class="page-title pt-4">Careers</h4>
     </div>
