added mission and vision

--- a/akuaa/templates/akuaa/about.html
+++ b/akuaa/templates/akuaa/about.html
@@ -13,13 +13,15 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <img class="d-none d-md-block" src="{% static 'akuaa/images/dj-bg.jpeg' %}" height="250px" width="100%" alt="">
+                <img class="d-none d-md-block" src="{% static 'akuaa/images/dj-bg.jpeg' %}" height="300px" width="100%" alt="">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2 style="font-family: 'Merriweather', serif;">About</h2>
-                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate architecto velit
-                    quasi ea doloribus. Totam, nobis blanditiis. Magnam dolor necessitatibus assumenda doloribus aliquid
-                    laborum, quisquam vitae consequatur ut qui.</h4>
+                <p>Our vision is a world where African children are given equal opportunities to explore and develop their musical
+                abilities. We envision a future where our one-week music program becomes a gateway for young talents in Ghana, enabling
+                them to connect with their peers from diverse backgrounds, exchange musical knowledge, and gain exposure to
+                international music platforms. We aspire to create a lasting impact, instilling confidence, cultural pride, and a
+                lifelong love for music in the hearts of these young individuals.</p>
             </div>
         </div>
     </div>
@@ -29,12 +31,13 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2 style="font-family: 'Merriweather', serif;">Mission</h2>
-                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate architecto velit
-                    quasi ea doloribus. Totam, nobis blanditiis. Magnam dolor necessitatibus assumenda doloribus aliquid
-                    laborum, quisquam vitae consequatur ut qui.</h4>
+                <p>Our mission is to bridge the cultural and musical divide between African children and the rest of the world. We aim to
+                provide an enriching and transformative experience for children in Ghana by offering them a one-week music program in
+                America. Through this program, we seek to nurture their musical talent, foster cultural exchange, and empower them to
+                become ambassadors of African music on a global stage.</p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <img class="d-none d-md-block" src="{% static 'akuaa/images/dj-bg.jpeg' %}" height="250px" width="100%" alt="">
+                <img class="d-none d-md-block" src="{% static 'akuaa/images/dj-bg.jpeg' %}" height="300px" width="100%" alt="">
             </div>
         </div>
     </div>
@@ -47,9 +50,11 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h2 style="font-family: 'Merriweather', serif;">Vision</h2>
-                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate architecto velit
-                    quasi ea doloribus. Totam, nobis blanditiis. Magnam dolor necessitatibus assumenda doloribus aliquid
-                    laborum, quisquam vitae consequatur ut qui.</h4>
+                <p>Our vision is a world where African children are given equal opportunities to explore and develop their musical
+                abilities. We envision a future where our one-week music program becomes a gateway for young talents in Ghana, enabling
+                them to connect with their peers from diverse backgrounds, exchange musical knowledge, and gain exposure to
+                international music platforms. We aspire to create a lasting impact, instilling confidence, cultural pride, and a
+                lifelong love for music in the hearts of these young individuals.</p>
             </div>
         </div>
     </div>
